add bzlmod support (#2670)
* add bzlmod support

* drop buggy clang-11 which dont suport -fno-access-control correctly

* fix typo in ci-linux.yml

* give up trying to test bazel in clang

--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -46,26 +46,13 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
-    - name: install dependences
-      run: |
-           sudo apt-get update
-           sudo apt-get install libibverbs-dev
-    - name: compile
-      run: |
-           export CC=gcc && export CXX=g++
-           bazel build -j ${{env.proc_num}} -c opt --copt -DHAVE_ZLIB=1 //...
+    - run: bazel test --verbose_failures -- //... -//example/...
   
   gcc-compile-with-boringssl:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
-    - name: install dependences
-      run: |
-           sudo apt-get update
-           sudo apt-get install libibverbs-dev
-    - name: compile-with-boringssl
-      run: |
-          bazel build -j 12 -c opt --define with_mesalink=false --define with_glog=true --define with_thrift=true --define BRPC_WITH_BORINGSSL=true --copt -DHAVE_ZLIB=1 //...
+    - run: bazel test --verbose_failures --define with_mesalink=false --define with_glog=true --define with_thrift=true --define BRPC_WITH_BORINGSSL=true -- //... -//example/...
 
   gcc-compile-with-make-all-options:
     runs-on: ubuntu-20.04
@@ -99,14 +86,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
-    - name: install dependences
-      run: |
-           sudo apt-get update
-           sudo apt-get install libibverbs-dev
-    - name: compile
-      run: |
-           export CC=gcc && export CXX=g++
-           bazel build -j 12 -c opt --define with_mesalink=false --define with_glog=true --define with_thrift=true --copt -DHAVE_ZLIB=1 //...
+    - run: bazel test --verbose_failures --define with_mesalink=false --define with_glog=true --define with_thrift=true -- //... -//example/...
 
   clang-compile-with-make:
     runs-on: ubuntu-20.04
@@ -140,26 +120,13 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
-    - name: install dependences
-      run: |
-           sudo apt-get update
-           sudo apt-get install libibverbs-dev
-    - name: compile
-      run: |
-           export CC=clang && export CXX=clang++
-           bazel build -j ${{env.proc_num}} -c opt --copt -DHAVE_ZLIB=1 //...
+    - run: bazel build --verbose_failures --action_env=CC=clang-12 -- //... -//example/...
 
   clang-compile-with-boringssl:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
-    - name: install dependences
-      run: |
-           sudo apt-get update
-           sudo apt-get install libibverbs-dev
-    - name: compile
-      run: |
-        bazel build -j ${{env.proc_num}} -c opt --define with_mesalink=false --define with_glog=true --define with_thrift=true --define BRPC_WITH_BORINGSSL=true  --copt -DHAVE_ZLIB=1 //...
+    - run: bazel build --verbose_failures --action_env=CC=clang-12 --define with_mesalink=false --define with_glog=true --define with_thrift=true --define BRPC_WITH_BORINGSSL=true -- //... -//example/...
 
   clang-compile-with-make-all-options:
     runs-on: ubuntu-20.04
@@ -193,14 +160,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
-    - name: install dependences
-      run: |
-           sudo apt-get update
-           sudo apt-get install libibverbs-dev
-    - name: compile
-      run: |
-           export CC=clang && export CXX=clang++
-           bazel build -j ${{env.proc_num}} -c opt --define with_mesalink=false --define with_glog=true --define with_thrift=true --copt -DHAVE_ZLIB=1 //...
+    - run: bazel build --verbose_failures --action_env=CC=clang-12 --define with_mesalink=false --define with_glog=true --define with_thrift=true -- //... -//example/...
 
   clang-unittest:
     runs-on: ubuntu-20.04
