--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -322,7 +322,9 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
         "-Wl,-U,_MallocExtension_ReleaseFreeMemory"
         "-Wl,-U,_ProfilerStart"
         "-Wl,-U,_ProfilerStop"
-        "-Wl,-U,__Z13GetStackTracePPvii")
+        "-Wl,-U,__Z13GetStackTracePPvii"
+        "-undefined dynamic_lookup"
+    )
 endif()
 
 # for *.so
