support stats print

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -324,6 +324,7 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
         "-Wl,-U,_ProfilerStop"
         "-Wl,-U,__Z13GetStackTracePPvii"
         "-Wl,-U,_mallctl"
+        "-Wl,-U,_malloc_stats_print"
     )
 endif()
 
