--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -64,6 +64,7 @@ LINKOPTS = [
         "-Wl,-U,__Z13GetStackTracePPvii",
         "-Wl,-U,_RegisterThriftProtocol",
         "-Wl,-U,_mallctl",
+        "-Wl,-U,_malloc_stats_print",
     ],
     "//conditions:default": [
         "-lrt",
