Make bthread semaphore and rwlock noncopyable

--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -139,6 +139,7 @@ TEST_BUTIL_SOURCES = [
     #"popen_unittest.cpp",
     "bounded_queue_unittest.cc",
     "butil_unittest_main.cpp",
+    "scope_guard_unittest.cc",
 ] + select({
     "@bazel_tools//tools/osx:darwin_x86_64": [],
     "//conditions:default": [
