--- a/test/Makefile
+++ b/test/Makefile
@@ -46,108 +46,108 @@ ifeq ($(SYSTEM),Darwin)
     SOEXT = dylib
 endif
 
-TEST_BUTIL_SOURCES = flat_map_unittest.cpp
-#TEST_BUTIL_SOURCES = \
-#    at_exit_unittest.cc \
-#    atomicops_unittest.cc \
-#    base64_unittest.cc \
-#    base64url_unittest.cc \
-#    big_endian_unittest.cc \
-#    bits_unittest.cc \
-#    hash_tables_unittest.cc \
-#    linked_list_unittest.cc \
-#    mru_cache_unittest.cc \
-#    small_map_unittest.cc \
-#    stack_container_unittest.cc \
-#    mpsc_queue_unittest.cc \
-#    cpu_unittest.cc \
-#    crash_logging_unittest.cc \
-#    leak_tracker_unittest.cc \
-#    stack_trace_unittest.cc \
-#    environment_unittest.cc \
-#    file_util_unittest.cc \
-#    dir_reader_posix_unittest.cc \
-#    file_path_unittest.cc \
-#    file_unittest.cc \
-#    scoped_temp_dir_unittest.cc \
-#    guid_unittest.cc \
-#    hash_unittest.cc \
-#    lazy_instance_unittest.cc \
-#    aligned_memory_unittest.cc \
-#    linked_ptr_unittest.cc \
-#    ref_counted_memory_unittest.cc \
-#    ref_counted_unittest.cc \
-#    scoped_ptr_unittest.cc \
-#    scoped_vector_unittest.cc \
-#    singleton_unittest.cc \
-#    weak_ptr_unittest.cc \
-#    observer_list_unittest.cc \
-#    file_descriptor_shuffle_unittest.cc \
-#    rand_util_unittest.cc \
-#    safe_numerics_unittest.cc \
-#    scoped_clear_errno_unittest.cc \
-#    scoped_generic_unittest.cc \
-#    security_unittest.cc \
-#    sha1_unittest.cc \
-#    stl_util_unittest.cc \
-#    nullable_string16_unittest.cc \
-#    safe_sprintf_unittest.cc \
-#    string16_unittest.cc \
-#    stringprintf_unittest.cc \
-#    string_number_conversions_unittest.cc \
-#    string_piece_unittest.cc \
-#    string_split_unittest.cc \
-#    string_tokenizer_unittest.cc \
-#    string_util_unittest.cc \
-#    stringize_macros_unittest.cc \
-#    sys_string_conversions_unittest.cc \
-#    utf_offset_string_conversions_unittest.cc \
-#    utf_string_conversions_unittest.cc \
-#    cancellation_flag_unittest.cc \
-#    condition_variable_unittest.cc \
-#    lock_unittest.cc \
-#    waitable_event_unittest.cc \
-#    type_traits_unittest.cc \
-#    non_thread_safe_unittest.cc \
-#    platform_thread_unittest.cc \
-#    simple_thread_unittest.cc \
-#    thread_checker_unittest.cc \
-#    thread_collision_warner_unittest.cc \
-#    thread_id_name_manager_unittest.cc \
-#    thread_local_storage_unittest.cc \
-#    thread_local_unittest.cc \
-#    watchdog_unittest.cc \
-#    time_unittest.cc \
-#    version_unittest.cc \
-#    logging_unittest.cc \
-#    cacheline_unittest.cpp \
-#    class_name_unittest.cpp \
-#    endpoint_unittest.cpp \
-#    unique_ptr_unittest.cpp \
-#    errno_unittest.cpp \
-#    fd_guard_unittest.cpp \
-#    file_watcher_unittest.cpp \
-#    find_cstr_unittest.cpp \
-#    scoped_lock_unittest.cpp \
-#    status_unittest.cpp \
-#    string_printf_unittest.cpp \
-#    string_splitter_unittest.cpp \
-#    synchronous_event_unittest.cpp \
-#    temp_file_unittest.cpp \
-#    baidu_thread_local_unittest.cpp \
-#    thread_key_unittest.cpp \
-#    baidu_time_unittest.cpp \
-#    flat_map_unittest.cpp \
-#    crc32c_unittest.cc \
-#    iobuf_unittest.cpp \
-#    object_pool_unittest.cpp \
-#    recordio_unittest.cpp \
-#    test_switches.cc \
-#    scoped_locale.cc \
-#    popen_unittest.cpp \
-#    bounded_queue_unittest.cc \
-#    butil_unittest_main.cpp \
-#    scope_guard_unittest.cc
+TEST_BUTIL_SOURCES = \
+    at_exit_unittest.cc \
+    atomicops_unittest.cc \
+    base64_unittest.cc \
+    base64url_unittest.cc \
+    big_endian_unittest.cc \
+    bits_unittest.cc \
+    hash_tables_unittest.cc \
+    linked_list_unittest.cc \
+    mru_cache_unittest.cc \
+    small_map_unittest.cc \
+    stack_container_unittest.cc \
+    mpsc_queue_unittest.cc \
+    cpu_unittest.cc \
+    crash_logging_unittest.cc \
+    leak_tracker_unittest.cc \
+    stack_trace_unittest.cc \
+    environment_unittest.cc \
+    file_util_unittest.cc \
+    dir_reader_posix_unittest.cc \
+    file_path_unittest.cc \
+    file_unittest.cc \
+    scoped_temp_dir_unittest.cc \
+    guid_unittest.cc \
+    hash_unittest.cc \
+    lazy_instance_unittest.cc \
+    aligned_memory_unittest.cc \
+    linked_ptr_unittest.cc \
+    ref_counted_memory_unittest.cc \
+    ref_counted_unittest.cc \
+    scoped_ptr_unittest.cc \
+    scoped_vector_unittest.cc \
+    singleton_unittest.cc \
+    weak_ptr_unittest.cc \
+    observer_list_unittest.cc \
+    file_descriptor_shuffle_unittest.cc \
+    rand_util_unittest.cc \
+    safe_numerics_unittest.cc \
+    scoped_clear_errno_unittest.cc \
+    scoped_generic_unittest.cc \
+    security_unittest.cc \
+    sha1_unittest.cc \
+    stl_util_unittest.cc \
+    nullable_string16_unittest.cc \
+    safe_sprintf_unittest.cc \
+    string16_unittest.cc \
+    stringprintf_unittest.cc \
+    string_number_conversions_unittest.cc \
+    string_piece_unittest.cc \
+    string_split_unittest.cc \
+    string_tokenizer_unittest.cc \
+    string_util_unittest.cc \
+    stringize_macros_unittest.cc \
+    sys_string_conversions_unittest.cc \
+    utf_offset_string_conversions_unittest.cc \
+    utf_string_conversions_unittest.cc \
+    cancellation_flag_unittest.cc \
+    condition_variable_unittest.cc \
+    lock_unittest.cc \
+    waitable_event_unittest.cc \
+    type_traits_unittest.cc \
+    non_thread_safe_unittest.cc \
+    platform_thread_unittest.cc \
+    simple_thread_unittest.cc \
+    thread_checker_unittest.cc \
+    thread_collision_warner_unittest.cc \
+    thread_id_name_manager_unittest.cc \
+    thread_local_storage_unittest.cc \
+    thread_local_unittest.cc \
+    watchdog_unittest.cc \
+    time_unittest.cc \
+    version_unittest.cc \
+    logging_unittest.cc \
+    cacheline_unittest.cpp \
+    class_name_unittest.cpp \
+    endpoint_unittest.cpp \
+    unique_ptr_unittest.cpp \
+    errno_unittest.cpp \
+    fd_guard_unittest.cpp \
+    file_watcher_unittest.cpp \
+    find_cstr_unittest.cpp \
+    scoped_lock_unittest.cpp \
+    status_unittest.cpp \
+    string_printf_unittest.cpp \
+    string_splitter_unittest.cpp \
+    synchronous_event_unittest.cpp \
+    temp_file_unittest.cpp \
+    baidu_thread_local_unittest.cpp \
+    thread_key_unittest.cpp \
+    baidu_time_unittest.cpp \
+    flat_map_unittest.cpp \
+    crc32c_unittest.cc \
+    iobuf_unittest.cpp \
+    object_pool_unittest.cpp \
+    recordio_unittest.cpp \
+    test_switches.cc \
+    scoped_locale.cc \
+    popen_unittest.cpp \
+    bounded_queue_unittest.cc \
+    butil_unittest_main.cpp \
+    scope_guard_unittest.cpp \
+    optional_unittest.cpp
 
 ifeq ($(SYSTEM), Linux)
     TEST_BUTIL_SOURCES += test_file_util_linux.cc \
