--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -39,6 +39,20 @@ COPTS = [
     "//conditions:default": ["-DBRPC_WITH_GLOG=0"],
 })
 
+LINKOPTS = [
+    "-lpthread",
+    #"-lssl",
+    #"-lcrypto",
+    "-ldl",
+    "-lz",
+    "-lprofiler",
+] + select({
+    "@bazel_tools//tools/osx:darwin": [],
+    "//conditions:default": [
+        "-lrt",
+    ],
+})
+
 TEST_BUTIL_SOURCES = [
     "at_exit_unittest.cc",
     "atomicops_unittest.cc",
