--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -483,7 +483,7 @@ cc_test(
         ":sstream_workaround",
         "//:brpc",
         "@com_google_googletest//:gtest",
-        "@com_google_protobuf",
+        "@com_google_protobuf//:protobuf",
     ],
 )
 
@@ -503,6 +503,7 @@ cc_test(
         ":sstream_workaround",
         "//:brpc",
         "@com_google_googletest//:gtest",
+        "@com_google_protobuf//:protobuf",
     ],
 )
 
@@ -522,6 +523,7 @@ cc_test(
         ":sstream_workaround",
         "//:brpc",
         "@com_google_googletest//:gtest",
+        "@com_google_protobuf//:protobuf",
     ],
 )
 
@@ -541,6 +543,7 @@ cc_test(
         ":sstream_workaround",
         "//:brpc",
         "@com_google_googletest//:gtest",
+        "@com_google_protobuf//:protobuf",
     ],
 )
 
@@ -560,6 +563,7 @@ cc_test(
         ":sstream_workaround",
         "//:brpc",
         "@com_google_googletest//:gtest",
+        "@com_google_protobuf//:protobuf",
     ],
 )
 
@@ -578,6 +582,7 @@ cc_test(
         ":sstream_workaround",
         "//:brpc",
         "@com_google_googletest//:gtest",
+        "@com_google_protobuf//:protobuf",
     ],
 )
 
@@ -597,6 +602,7 @@ cc_test(
         ":sstream_workaround",
         "//:brpc",
         "@com_google_googletest//:gtest",
+        "@com_google_protobuf//:protobuf",
     ],
 )
 
@@ -616,6 +622,7 @@ cc_test(
         ":sstream_workaround",
         "//:brpc",
         "@com_google_googletest//:gtest",
+        "@com_google_protobuf//:protobuf",
     ],
 )
 
@@ -635,6 +642,7 @@ cc_test(
         ":sstream_workaround",
         "//:brpc",
         "@com_google_googletest//:gtest",
+        "@com_google_protobuf//:protobuf",
     ],
 )
 
@@ -654,6 +662,7 @@ cc_test(
         ":sstream_workaround",
         "//:brpc",
         "@com_google_googletest//:gtest",
+        "@com_google_protobuf//:protobuf",
     ],
 )
 
@@ -673,6 +682,7 @@ cc_test(
         ":sstream_workaround",
         "//:brpc",
         "@com_google_googletest//:gtest",
+        "@com_google_protobuf//:protobuf",
     ],
 )
 
@@ -692,6 +702,7 @@ cc_test(
         ":sstream_workaround",
         "//:brpc",
         "@com_google_googletest//:gtest",
+        "@com_google_protobuf//:protobuf",
     ],
 )
 
@@ -711,6 +722,7 @@ cc_test(
         ":sstream_workaround",
         "//:brpc",
         "@com_google_googletest//:gtest",
+        "@com_google_protobuf//:protobuf",
     ],
 )
 
@@ -730,6 +742,7 @@ cc_test(
         ":sstream_workaround",
         "//:brpc",
         "@com_google_googletest//:gtest",
+        "@com_google_protobuf//:protobuf",
     ],
 )
 
@@ -749,6 +762,7 @@ cc_test(
         ":sstream_workaround",
         "//:brpc",
         "@com_google_googletest//:gtest",
+        "@com_google_protobuf//:protobuf",
     ],
 )
 
@@ -768,6 +782,7 @@ cc_test(
         ":sstream_workaround",
         "//:brpc",
         "@com_google_googletest//:gtest",
+        "@com_google_protobuf//:protobuf",
     ],
 )
 
