Chore: minimize dependence to avoid protoc_lib containing main func in used protobuf version (#2881)

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -444,7 +444,7 @@ cc_library(
     deps = [
         ":brpc_idl_options_cc_proto",
         ":butil",
-        "@com_google_protobuf//:protoc_lib",
+        "@com_google_protobuf//src/google/protobuf/compiler:code_generator",
     ],
 )
 
