--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -176,6 +176,13 @@ cc_library(
     ],
 )
 
+cc_library(
+    name = "gperftools_helper",
+    hdrs = [
+        "gperftools_helper.h",
+    ],
+)
+
 cc_test(
     name = "butil_test",
     srcs = TEST_BUTIL_SOURCES + [
@@ -187,6 +194,7 @@ cc_test(
     deps = [
         ":cc_test_proto",
         ":sstream_workaround",
+        ":gperftools_helper",
         "//:brpc",
         "@com_google_googletest//:gtest",
     ],
@@ -206,6 +214,7 @@ cc_test(
     copts = COPTS,
     deps = [
         ":sstream_workaround",
+        ":gperftools_helper",
         "//:bvar",
         "@com_google_googletest//:gtest",
     ],
@@ -234,6 +243,7 @@ cc_test(
     copts = COPTS,
     deps = [
         ":sstream_workaround",
+        ":gperftools_helper",
         "//:brpc",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
