--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -154,11 +154,12 @@ proto_library(
         [
             "*.proto",
         ],
-        exclude = [
-            "echo.proto",
-        ],
     ),
+    strip_import_prefix = "/test",
     visibility = ["//visibility:public"],
+    deps = [
+        "//:brpc_idl_options_proto",
+    ]
 )
 
 cc_proto_library(
@@ -233,6 +234,23 @@ cc_test(
     ),
     copts = COPTS,
     deps = [
+        ":sstream_workaround",
+        "//:brpc",
+        "@com_google_googletest//:gtest",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_test(
+    name = "brpc_prometheus_test",
+    srcs = glob(
+        [
+            "brpc_prometheus_*_unittest.cpp",
+        ],
+    ),
+    copts = COPTS,
+    deps = [
+        ":cc_test_proto",
         ":sstream_workaround",
         "//:brpc",
         "@com_google_googletest//:gtest",
